--- a/notes-app/package.json
+++ b/notes-app/package.json
@@ -21,7 +21,7 @@
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^3.0.0",
     "electron-updater": "^6.1.7",
-    "sqlite3": "^5.1.7"
+    "sql.js": "^1.11.0"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^1.0.2",
